[gd_scene load_steps=3 format=3 uid="uid://dnr0kvxgmfsv2"]

[ext_resource type="Script" uid="uid://dn8srnq3cvjv3" path="res://res/mods/WorldMapGenerator/Scenes/TestScenes/TownGenScene.gd" id="1_7afbb"]
[ext_resource type="Theme" uid="uid://8c5j2xptwq82" path="res://res/core/UI/Theme/SproutLands/sprout_lands_theme.tres" id="2_2835w"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7afbb")
cell_size = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2835w")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 38.0
grow_horizontal = 0
alignment = 1

[node name="GenButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "Gen"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="LayerAll" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerAll"

[node name="LayerShape" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerShape"

[node name="LayerWall" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerWall"

[node name="LayerPOI" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerPOI"

[node name="LayerRoad" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerRoad"

[node name="LayerDistrict" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerDistrict"

[node name="LayerLot" type="Button" parent="CanvasLayer/Control/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_2835w")
text = "LayerLot"

[node name="Control" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="TownInfo" type="TextEdit" parent="CanvasLayer/Control/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -128.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
editable = false
scroll_smooth = true
